# device-envoy-esp-blinky

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
examples/c2/devkitm1_v1_0/: blinky.rs
examples/c2/generic/: blinky.rs
examples/c3/generic/: blinky.rs
examples/c3/luatos/: blinky.rs
examples/c5/generic/: blinky.rs
examples/c6/devkitc1_n8/: blinky.rs
examples/c6/generic/: blinky.rs
examples/c61/generic/: blinky.rs
examples/esp32/generic/: blinky.rs
examples/h2/generic/: blinky.rs
examples/s2/generic/: blinky.rs
examples/s3/devkitc1_v1_0_n16r8/: blinky.rs
examples/s3/devkitc1_v1_1_n16r8/: blinky.rs
examples/s3/generic/: blinky.rs
projects/: README.md  board-matrix.md
scripts/: device-action.sh  sync-examples.sh
src/: main.rs
xtask/src/: main.rs
