[package]
name = "device-envoy-esp-blinky"
version = "0.0.5-alpha.5"
edition = "2024"

[dependencies]
device-envoy-esp = { version = "0.0.5-alpha.5", default-features = false }
embassy-executor = "0.9.0"
embassy-time = "0.5.0"
smart-leds = "0.4.0"
paste = "1.0"
static_cell = "2.1.1"

[target.'cfg(all(target_os = "none", target_arch = "riscv32"))'.dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c6", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["esp32c6", "embassy", "esp-radio", "esp-alloc"] }
esp-backtrace = { version = "0.18.1", features = ["esp32c6", "panic-handler", "halt-cores", "println"] }
esp-println = { version = "0.16.1", default-features = false, features = ["esp32c6", "uart", "log-04"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
log = { version = "0.4", default-features = false }

[target.'cfg(all(target_os = "none", target_arch = "xtensa"))'.dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["esp32s3", "embassy", "esp-radio", "esp-alloc"] }
esp-backtrace = { version = "0.18.1", features = ["esp32s3", "panic-handler", "halt-cores", "println"] }
esp-println = { version = "0.16.1", default-features = false, features = ["esp32s3", "uart", "log-04"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
log = { version = "0.4", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
