[package]
name = "device-envoy-esp-blinky"
version = "0.0.5-alpha.5"
edition = "2024"

[features]
default = ["esp32c6"]
esp32 = [
    "device-envoy-esp/esp32",
    "esp-hal/esp32",
    "esp-rtos/esp32",
    "esp-backtrace/esp32",
    "esp-println/esp32",
    "esp-bootloader-esp-idf/esp32",
]
esp32c2 = [
    "device-envoy-esp/esp32c2",
    "esp-hal/esp32c2",
    "esp-rtos/esp32c2",
    "esp-backtrace/esp32c2",
    "esp-println/esp32c2",
    "esp-bootloader-esp-idf/esp32c2",
]
esp32c3 = [
    "device-envoy-esp/esp32c3",
    "esp-hal/esp32c3",
    "esp-rtos/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
]
esp32c6 = [
    "device-envoy-esp/esp32c6",
    "esp-hal/esp32c6",
    "esp-rtos/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
]
esp32h2 = [
    "device-envoy-esp/esp32h2",
    "esp-hal/esp32h2",
    "esp-rtos/esp32h2",
    "esp-backtrace/esp32h2",
    "esp-println/esp32h2",
    "esp-bootloader-esp-idf/esp32h2",
]
esp32s2 = [
    "device-envoy-esp/esp32s2",
    "esp-hal/esp32s2",
    "esp-rtos/esp32s2",
    "esp-backtrace/esp32s2",
    "esp-println/esp32s2",
    "esp-bootloader-esp-idf/esp32s2",
]
esp32s3 = [
    "device-envoy-esp/esp32s3",
    "esp-hal/esp32s3",
    "esp-rtos/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
]

[dependencies]
# Workspace-local pin to hardened crate; switch back to crates.io after next publish.
device-envoy-esp = { path = "../device-envoy/crates/device-envoy-esp", default-features = false }
embassy-executor = "0.9.0"
embassy-time = "0.5.0"
smart-leds = "0.4.0"
paste = "1.0"
static_cell = "2.1.1"

[target.'cfg(target_os = "none")'.dependencies]
esp-hal = { version = "1.0.0", default-features = false, features = ["unstable"] }
esp-rtos = { version = "0.2.0", default-features = false, features = ["embassy", "esp-radio", "esp-alloc"] }
esp-backtrace = { version = "0.18.1", default-features = false, features = ["panic-handler", "halt-cores", "println"] }
esp-println = { version = "0.16.1", default-features = false, features = ["uart", "log-04"] }
esp-bootloader-esp-idf = { version = "0.4.0", default-features = false }
log = { version = "0.4", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
